--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,4 @@ drush/drush.symlink/cache
 drush/drush.symlink/*.drushrc.php
 vim/vim.symlink/.netrwhist
 sublime2/User/Package\ Control.sublime-settings
-
+local/localrc.symlink
