Remove cached data

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ nbproject
 cloudapp
 drush/drush.symlink/cache
 drush/drush.symlink/*.drushrc.php
+console/console.symlink/cache
 vim/vim.symlink/.netrwhist
 sublime2/User/Package\ Control.sublime-settings
 local/localrc.symlink
